--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^6.2.4",
     "morgan": "^1.10.0",
+    "node-fetch": "^3.2.2",
     "passport": "^0.5.2",
     "passport-google-oauth20": "^2.0.0"
   }
